--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "homepage": "https://github.com/AnhHoangQuach/Specialized_Japanese#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongodb": "^3.6.5"
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongodb": "^3.6.5",
+    "mongoose": "^5.12.2"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
