--- a/client/package.json
+++ b/client/package.json
@@ -17,11 +17,13 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "js-cookie": "^2.2.1",
     "vue": "^2.6.12",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.5.1",
     "vue-toastr": "^2.1.2",
-    "vuex": "^3.6.2"
+    "vuex": "^3.6.2",
+    "vuex-persistedstate": "^4.0.0-beta.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
